# FicelloEngine

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
.xmake/windows/x64/cache/: config  vsxmake
ficello/: engine.hpp
game/: main.lua
lua/: CMakeLists.txt
src/: CMakeLists.txt  Forms.cpp  ficello.hpp  main.cpp
vsxmake2022/: FicelloEngine-main.sln
vsxmake2022/ficello/: ficello.vcxproj  ficello.vcxproj.filters
